--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         </activity>
         <activity android:name=".CrimeActivity" >
         </activity>
-        <activity android:name=".CrimePagerActivity" >
+        <activity android:name=".CrimePagerActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".CrimeListActivity"
+            >
         </activity>
     </application>
 
